--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week04-hw",
+  "name": "week05-hw",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/core": "^7.19.3",
     "babel-jest": "^29.0.3",
+    "firebase-admin": "^11.0.1",
     "identity-obj-proxy": "^3.0.0",
     "next": "12.3.0",
     "react": "18.2.0",
